profile page image stretch fix

--- a/assets/scss/home_style.scss
+++ b/assets/scss/home_style.scss
@@ -90,6 +90,7 @@ body{
                     width: 35%;
                     min-width: 72px;
                     max-width: 105px;
+                    object-fit: cover;
                     align-items: center;
                     justify-items: center;
                     #profile_pic{
